# gokao

./: .drone.yml  .gitignore  .golangci.yml  AGENTS.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  DRONE_SETUP.md  Dockerfile.optimized  GEMINI.md  IFLOW.md  IMPROVEMENT_ACTION_PLAN.md  Makefile  Makefile.common  OPTIMIZATION_SUMMARY.md  README.md  SOURCE_CODE_AUDIT_REPORT.md  audit_report_2025-08-30_22-31.md  completeness_report_2025-08-30_22-32.md  comprehensive_audit_final_report.md  comprehensive_audit_report_20250906.json  deploy-fixes.sh  deploy-frontend.sh  deploy-remote.sh  deploy.sh  docker-compose.override.example.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  drone-docker-compose.yml  drone-server-config.yml  final_audit_summary_report_2025-08-30_22-38.md  follow_up_audit_report_20250905_113704.md  frontend_ui_audit_report_2025-08-30_22-35.md  go.mod  go.sum  go.work  go.work.sum  log.txt  logs.bat  map.md  (+13 more)
.ai-rules/: development-guidelines.md  project-archive.md
.augment/rules/: rule-gaokao.md
.codex/: config.toml  history.jsonl  installation_id  legacy_vs_bl.md  logs_2.sqlite-shm  logs_2.sqlite-wal  perf_fix_plan_2025-03-02.md  perf_fix_todo.md  session_summary.md  state_5.sqlite-shm  state_5.sqlite-wal
.codex/.tmp/: plugins.sha
.github/workflows/: ci-cd.yml  ci.yml
.iflow/agents/: agents.md  gaokao-system-architect1.md
.qoder/rules/: rule.md
.spec-workflow/steering/: execution-plan.md  product.md  structure.md  tasks-backlog.md  tech.md
.specify/extensions/: .registry
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: simple_main.py
cpp-modules/device-fingerprint/: CLAUDE.md  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DeviceFingerprintConfig.cmake  LICENSE  Makefile  README.md  c_interface_example  device_fingerprint.pc  device_fingerprint_tests  fingerprint_example  libdevice_fingerprint.so.1  libdevice_fingerprint.so.1.0.0
cpp-modules/device-fingerprint/bindings/go/: device_fingerprint.go  device_fingerprint.go.in
cpp-modules/device-fingerprint/cmake/: DeviceFingerprintConfig.cmake.in  device_fingerprint.pc.in
cpp-modules/device-fingerprint/docs/: Doxyfile.in
cpp-modules/device-fingerprint/examples/: c_interface_example.c  fingerprint_example.cpp
cpp-modules/device-fingerprint/include/: CLAUDE.md  c_interface.h  crypto_utils.h  device_fingerprint.h  platform_detector.h
cpp-modules/device-fingerprint/src/: CLAUDE.md  c_interface.cpp  crypto_utils.cpp  device_fingerprint.cpp  platform_detector.cpp
cpp-modules/device-fingerprint/tests/: test_device_fingerprint.cpp
cpp-modules/license/: CMakeLists.txt  gaokaohub-license.pc.in
cpp-modules/license/include/: c_interface.h  crypto_utils.h  license_manager.h
cpp-modules/license/src/: crypto_utils.cpp  license_manager.cpp
cpp-modules/volunteer-matcher/: CLAUDE.md  CMakeLists.txt  README.md  build.cmd  build.sh
cpp-modules/volunteer-matcher/benchmarks/: volunteer_matcher_benchmark.cpp
cpp-modules/volunteer-matcher/bindings/go/: volunteer_matcher.go  volunteer_matcher.go.in
cpp-modules/volunteer-matcher/cmake/: VolunteerMatcherConfig.cmake.in  volunteer_matcher.pc.in
cpp-modules/volunteer-matcher/examples/: volunteer_matcher_example.cpp
cpp-modules/volunteer-matcher/include/: admission_predictor.h  c_interface.h  risk_assessor.h  university_filter.h  volunteer_matcher.h
cpp-modules/volunteer-matcher/src/: admission_predictor.cpp  ai_recommendation_engine.cpp  c_interface.cpp  exceptions.h  feature_extractor.cpp  fusion_strategies.cpp  hybrid_recommendation_engine.cpp  memory_manager.h  risk_assessor.cpp  university_filter.cpp  volunteer_matcher.cpp
cpp-modules/volunteer-matcher/tests/: integration_test.cpp  test_admission_predictor.cpp  test_risk_assessor.cpp  test_university_filter.cpp  test_volunteer_matcher.cpp
docker/: README.md
docker/dev/: .env.example  Dockerfile.api-gateway  Dockerfile.cpp-modules  Dockerfile.user-service  docker-compose.dev.yml
docker/prod/: .env.example  Dockerfile.api-gateway  Dockerfile.cpp-modules  Dockerfile.user-service  SECRETS.md  docker-compose.prod.yml
docker/scripts/: build.sh  cleanup.sh  deploy.sh  test.sh
docker/test/: Dockerfile.test-runner  (+1 more)
docs/: AI推荐算法审计报告-修复版.md  ARCHITECTURE_REPORT.md  COMPREHENSIVE_ANALYSIS_REPORT.md  Gaokao_Constraint_Protocol_v1.0.md  README.md  TECHNICAL_DEBT_AUDIT.md  TECH_DEBT_ANALYSIS.md  ai-algorithm-audit-report.md  architecture-analysis.md  backend-audit-report.md  data-audit-report.md  data_processing_pipeline_design.md  frontend-audit-report.md  system-audit-final.md  user-service-refactoring-plan.md
frontend/: .eslintrc.cjs  1.py  CLAUDE.md  Dockerfile  README.md  REFACTOR_PLAN.md  WORK_LOG.md  deploy-fix.sh  eslint.config.mjs  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
memories/: memory_20240611.json
mind/: thought_20240611.txt
monitoring/: README.md  alertmanager.yml  loki.yml  prometheus.yml  promtail.yml
scripts/: README_Firecrawl_Integration.md  add_popularity_score.go  advanced_university_crawler.go  build-all.sh  build-and-test.ps1  build.bat  build_device_auth_service.sh  check_admission_table.go  check_majors_table.go  convert_json_to_go.go  crawl_report.json  crawl_results.json  crawl_university_data.go  crawl_with_firecrawl.go  cross-platform-build.go  deploy.sh  dev-setup-simple.ps1  dev-setup.ps1  drone-activate.sh  drone-test.sh  enhanced_recommendation_algorithm.go  extended-data-service.go  fetch_moe_university_data.go  fetch_real_admission_data.go  fetch_real_major_data.go  fetch_real_university_data.go  final-test.go  firecrawl_crawler.py  firecrawl_university_crawler.go  fix-critical-issues.sh  fix-go-versions.sh  generate-secrets.sh  generate_complete_data.py  generate_majors.go  generate_universities.go  go-live-gate.sh  go.mod  import_admissions_from_extended.go  import_crawled_universities.go  import_majors_from_extended.go  (+32 more)
ssl/: README.md
(+612 files in other folders)
